# Chess

./: .gitignore  CMakeLists.txt  README.md
include/: Bishop.hpp  ChessBoard.hpp  GameController.hpp  GameState.hpp  HistoryTable.hpp  King.hpp  Knight.hpp  MainWindow.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  ResourceManager.hpp  Rook.hpp  Square.hpp  StockfishEngine.hpp  constants.hpp  ui_App.hpp
include/components/: ChessBoard.hpp  HistoryTable.hpp  MainWindow.hpp  RectItem.hpp  Square.hpp
include/models/: Bishop.hpp  BoardModel.hpp  BoardModelContext.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp
include/pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp
include/ui/: BoardView.hpp  CoordinateLabel.hpp  HistoryTable.hpp  MainWindow.hpp  PromotionDialog.hpp  RectItem.hpp  SquareItem.hpp  ui_App.hpp  ui_PromotionDialog.hpp
include/utils/: BoardTypes.hpp  enPassant.hpp  highlightFlags.hpp  moveLog.hpp  position.hpp  utils.hpp
resources/: README.md  resources.qrc
src/: ChessBoard.cpp  GameController.cpp  GameState.cpp  MainWindow.cpp  Piece.cpp  ResourceManager.cpp  Square.cpp  StockfishEngine.cpp  constants.cpp  main.cpp
src/components/: ChessBoard.cpp  HistoryTable.cpp  MainWindow.cpp  RectItem.cpp  Square.cpp
src/models/: Bishop.cpp  BoardModel.cpp  BoardModelContext.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/ui/: BoardView.cpp  CoordinateLabel.cpp  HistoryTable.cpp  MainWindow.cpp  PromotionDialog.cpp  RectItem.cpp  SquareItem.cpp
